# inferencing_maven

./: README.md
class1_resources/: .gitignore  RelayServe_Demo.ipynb  Serve_local_model.md
class1_resources/RelayServe/: CONTRIBUTING.md  README.md  config.yaml  pyproject.toml  router.py
class1_resources/RelayServe/.github/workflows/: publish.yml
class1_resources/RelayServe/backends/: __init__.py  backend_interface.py  local_backend.py  modal_backend.py  vllm_backend.py
class1_resources/RelayServe/docs/: main.md
class1_resources/RelayServe/tests/: __init__.py  test_streaming_and_request_id.py
class1_resources/class1_runs/: RelayServe_Demo.ipynb  Serve_local_model.md
class1_resources/class2_runs/: RUN_WITH_MODAL.md  RelayServe_Class2_Demo.ipynb
class1_resources/class3_runs/: .gitignore  README_single_gpu_exercise.md  RUN_GUIDE.md  launch_server.py  launch_vllm_notebook.sh  load_secrets.py  mysecrets copy.env  run_single_gpu_inference.py  run_single_gpu_inference_nb.ipynb  run_single_gpu_modal.py  vllm_chat_and_crewai_demo.ipynb  vllm_modal_serve.py  vllm_notebook_image.py
class1_resources/modal/: modal_llama_server.py  requirements.txt
class1_resources/scripts/: check_llama_setup.py  deploy_modal.sh  download_llama_server.py  download_model.py  spawn_backends.py  start_relay_class2.sh  start_relay_tinyllama.sh  streaming_chat.py  test_modal_backend.sh
